Attempting to stop scroll on mobile

--- a/public/stylesheets/css/application.css
+++ b/public/stylesheets/css/application.css
@@ -9,7 +9,8 @@
 
 body {
   height: 100%;
-  overflow: hidden; }
+  overflow: hidden;
+  position: relative; }
 
 .contain-float:after {
   visibility: hidden;
