--- a/public/stylesheets/scss/_base.scss
+++ b/public/stylesheets/scss/_base.scss
@@ -1,6 +1,7 @@
 body {
 	height: 100%;
 	overflow: hidden;
+	position: relative;
 }
 
 .contain-float:after {
